--- a/src/main/resources/client.properties
+++ b/src/main/resources/client.properties
@@ -1,6 +1,6 @@
 # Insert your AWS Credentials from http://aws.amazon.com/security-credentials
-access.key=AKIAJ5MHUMFRXUXUTQ7A
-secret.key=0NpTA+OXRkYaPx/KNMiLR30zsMP1i0Jeb2+AL1kJ
+access.key=
+secret.key=
 
 # Proxy Server Settings
 
