--- a/src/main/resources/client.properties
+++ b/src/main/resources/client.properties
@@ -1,6 +1,6 @@
 # Insert your AWS Credentials from http://aws.amazon.com/security-credentials
-access.key=
-secret.key=
+access.key=AKIAJ5VX67RJAQAHG4VQ
+secret.key=eLad6poSUykJuWJFIHywtQlelSh6sMMVCeSaKbWH
 
 # Proxy Server Settings
 
