Small fixes & tidy up

--- a/src/main/resources/client.properties
+++ b/src/main/resources/client.properties
@@ -1,6 +1,6 @@
 # Insert your AWS Credentials from http://aws.amazon.com/security-credentials
-access.key=AKIAJQ6K5UJTLGFM3N4A
-secret.key=NTHmIn+P5vVo+WUyEySqd2O9hHdcUhx0Gakbm7/v
+access.key=
+secret.key=
 
 # Proxy Server Settings
 
@@ -12,23 +12,17 @@ aws.proxyDomain      =
 aws.proxyWorkstation =
 
 #
-# Basic Authentication credentials for REST Service
-#
-tia.user=admin
-tia.password=admin
-
-#
 #  Amazon Web Service Endpoints
 #
-ec2.endpoint=eu-west-1.ec2.amazonaws.com
-sns.endpoint=sns.eu-west-1.amazonaws.com
-sdb.endpoint=sdb.eu-west-1.amazonaws.com
-s3.endpoint=
-sqs.endpoint=eu-west-1.queue.amazonaws.com
-rds.endpoint=rds.eu-west-1.amazonaws.com
-r53.endpoint=
-dynamodb.endpoint=
-cloudsearch.endpoint=
+ec2.endpoint=https://ec2.eu-west-1.amazonaws.com/
+sns.endpoint=https://sns.eu-west-1.amazonaws.com/
+sdb.endpoint=https://sdb.eu-west-1.amazonaws.com/
+s3.endpoint=https://s3-eu-west-1.amazonaws.com/
+sqs.endpoint=https://sqs.eu-west-1.amazonaws.com/
+rds.endpoint=https://rds.eu-west-1.amazonaws.com/
+r53.endpoint=https://sdb.eu-west-1.amazonaws.com/
+dynamodb.endpoint=https://dynamodb.eu-west-1.amazonaws.com/
+cloudsearch.endpoint=https://cloudsearch.eu-west-1.amazonaws.com/
 
 #
 # Amazon Cloudsearch
