--- a/src/main/resources/client.properties
+++ b/src/main/resources/client.properties
@@ -1,11 +1,11 @@
 # Insert your AWS Credentials from http://aws.amazon.com/security-credentials
-access.key=
-secret.key=
+access.key=AKIAJQ6K5UJTLGFM3N4A
+secret.key=NTHmIn+P5vVo+WUyEySqd2O9hHdcUhx0Gakbm7/v
 
 # Proxy Server Settings
 
-aws.proxyPort        =
-aws.proxyHost        =
+aws.proxyPort        =   8080
+aws.proxyHost        =   stev.proxy.corp.sopra
 aws.proxyUsername    =
 aws.proxyPassword    =
 aws.proxyDomain      =
